# aria-mobile-core

./: Cargo.toml  README.md  build-android.sh  build-ios.sh  build.rs
src/: aria_mobile.udl  dns.rs  gateway_client.rs  lib.rs  media.rs  types.rs
