[package]
name = "aria-mobile-core"
version = "0.1.0"
edition = "2021"
authors = ["5060 Solutions <josh@5060solutions.com>"]
description = "Shared Rust core for Aria mobile softphone apps (iOS/Android)"
license = "LicenseRef-Proprietary"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "aria_mobile_core"

[dependencies]
# UniFFI for Swift/Kotlin bindings
uniffi = { version = "0.28", features = ["cli"] }

# Shared SIP utilities
aria-sip-core = { git = "https://github.com/5060-Solutions/aria-sip-core.git" }

# RTP media engine (no device feature on mobile — we use platform audio)
rtp-engine = { git = "https://github.com/5060-Solutions/rtp-engine.git", default-features = false, features = ["g711", "opus", "srtp"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros"] }

# HTTP client for gateway API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
log = "0.4"
thiserror = "2"
once_cell = "1"
rand = "0.9"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
